adding search also cards are now clickable links

--- a/HTML/CountryInfo.html
+++ b/HTML/CountryInfo.html
@@ -10,33 +10,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <style>
+        div a{
+            width: 250px;
+            height: 250px;
+        }
+    </style>
 </head>
 <header class="Country_Header">
 </header>
-<main>
-    <div>
-        <h2>Assigned Country</h2>
-        <img src="MAP">
-        <img src="CAPITAL">
-        <img src="Nature Picture">
-        <ul>
-            <li>
-                for each element in information of django db
-            </li>
-        </ul>
-        <p>Essay about the given country</p>
-    </div>
-</main>
-    <!--adding editing and deleting comments-->
-    <div class="fixed-action-btn">
-        <a class="btn-floating btn-large red"><i class="large material-icons">mode_edit</i></a>
-        <ul>
-            <li><a href="#" class="btn-floating green"><i class="material-icons">publish</i></a></li>
-            <li><a href="#" class="btn-floating red"><i class="material-icons">delete</i></a></li>
-            <li><a href="#" class="btn-floating yellow"><i class="material-icons">edit</i></a></li>
-            <li><a href="#" class="btn-floating black"><i class="material-icons">attach_file</i></a></li>
-        </ul>
-    </div>
+    <div class="test">
+    <a href="http://www.google.com">
+        Lorem ipsum
+    </a>
+</div>
 
 
 </body>
