--- a/D3/Mock Business/Coffee.html
+++ b/D3/Mock Business/Coffee.html
@@ -4,25 +4,27 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <title>Coffee</title>
-    <script src="js/d3.min.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <style>
-        #chart-area svg {
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-        }
 
-        #logo {
-            height: 50px;
-        }
-
-        .navbar-brand {
-            height: 60px;
-            padding: 5px 0px;
-        }
-    </style>
 </head>
+
+<style>
+    #chart-area svg {
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+
+    #logo {
+        height: 50px;
+    }
+
+    .navbar-brand {
+        height: 60px;
+        padding: 5px 0px;
+    }
+</style>
 
 <body>
 
