re arranged structure

--- a/ChalkBoard(practice)/MATERIALIZE/2_3_buttons_icons.html
+++ b/ChalkBoard(practice)/MATERIALIZE/2_3_buttons_icons.html
@@ -127,25 +127,28 @@
     <!-- START HERE -->
 
     <!-- STANDARD BUTTON -->
-    <button>Read More</button>
-    <a>Read More</a>
+    <button class="btn">Read More</button>
+    <a class="btn">Read More</a>
 
     <!-- WAVES EFFECT -->
-    <button>Read More</button>
-    <a>Read More</a>
+    <button class="btn waves-effect waves-white">Read More</button>
+    <a class="btn waves-effect waves-white">Read More</a>
 
     <!-- WAVE COLORS -->
-    <button>Read More</button>
-    <button>Read More</button>
-    <button>Read More</button>
-    <button>Read More</button>
-    <button>Read More</button>
+    <button class="btn white red-text waves-effect waves-red">Read More</button>
+    <button class="btn white teal-text waves-effect waves-teal">Read More</button>
+    <button class="btn white green-text waves-effect waves-green">Read More</button>
+    <button class="btn white grey-text waves-effect waves-yellow">Read More</button>
+    <button class="btn white purple-text waves-effect waves-purple">Read More</button>
 
     <br>
     <br>
 
     <!-- MATERIAL ICONS (https://material.io/icons) -->
-
+    <i class="material-icons">shopping_cart</i>
+    <i class="material-icons">settings</i>
+    <i class="material-icons">search icon</i>
+    <i class="material-icons">stars</i>
 
     <br>
     <br>
