--- a/ChalkBoard(practice)/MATERIALIZE/2_6_collections.html
+++ b/ChalkBoard(practice)/MATERIALIZE/2_6_collections.html
@@ -125,119 +125,133 @@
     <!-- START HERE -->
 
     <!-- COLLECTION -->
-    <ul>
-      <li>First Item</li>
-      <li>Second Item</li>
-      <li>Third Item</li>
-      <li>Fourth Item</li>
+    <ul class="collection">
+      <li class="collection-item">First Item</li>
+      <li class="collection-item">Second Item</li>
+      <li class="collection-item">Third Item</li>
+      <li class="collection-item">Fourth Item</li>
     </ul>
 
     <!-- COLLECTION AS LINKS -->
-    <div>
-      <a href="#">First Item</a>
-      <a href="#">Second Item</a>
-      <a href="#">Third Item</a>
-      <a href="#">Fourth Item</a>
+    <div class="collection">
+      <a href="#" class="collection-item">First Item</a>
+      <a href="#" class="collection-item">Second Item</a>
+      <a href="#" class="collection-item">Third Item</a>
+      <a href="#" class="collection-item">Fourth Item</a>
       <!-- BADGES -->
-      <a href="#!">
-        <span>44</span>Fifth Item</a>
-      <a href="#!">
-        <span>3</span>Sixth Item</a>
+      <a href="#!" class="collection-item">
+        <span class="badge">44</span>Fifth Item</a>
+      <a href="#!" class="collection-item">
+        <span class="badge new">3</span>Sixth Item</a>
     </div>
 
     <!-- WITH HEADER -->
-    <ul>
-      <li>
+    <ul class="collection with-header">
+      <li class="collection-header">
         <h4>Items</h4>
       </li>
-      <li>First Item</li>
-      <li>Second Item</li>
-      <li>Third Item</li>
-      <li>Fourth Item</li>
+      <li class="collection-item">First Item</li>
+      <li class="collection-item">Second Item</li>
+      <li class="collection-item">Third Item</li>
+      <li class="collection-item">Fourth Item</li>
     </ul>
 
     <!-- SECONDARY CONTENT -->
-    <ul>
-      <li>
+    <ul class="collection with-header">
+      <li class="collection-header">
         <h4>Items</h4>
       </li>
-      <li>
+      <li class="collection-header">
         <div>First Item
-          <a href="#">
-            <i>/i>
+          <a href="#" class="secondary-content">
+            <i class="material-icons">close</i>
           </a>
         </div>
       </li>
-      <li>
+      <li class="collection-header">
         <div>Second Item
-          <a href="#">
-            <i></i>
+          <a href="#" class="secondary-content">
+            <i class="material-icons">close</i>
           </a>
         </div>
       </li>
-      <li>
+      <li class="collection-header">
         <div>Third Item
-          <a href="#">
-            <i></i>
+          <a href="#" class="secondary-content">
+            <i class="material-icons">close</i>
           </a>
         </div>
       </li>
-      <li>
+      <li class="collection-header">
         <div>Fourth Item
-          <a href="#">
-            <i></i>
+          <a href="#" class="secondary-content">
+            <i class="material-icons">close</i>
           </a>
         </div>
       </li>
     </ul>
 
     <!-- AVATAR CONTENT -->
-    <ul>
-      <li>
-        <i></i>
-        <span>John Doe</span>
+    <ul class="collection">
+      <li class="collection-item avatar">
+        <i class="material-icons blue circle">contacts</i>
+        <span class="title">John Doe</span>
         <p>jdoe@gmail.com
           <br> 555-555-5555
         </p>
-        <a href="#">
-          <i></i>
+        <a href="#" class="secondary-content">
+          <i class="material-icons">grade</i>
         </a>
       </li>
-      <li>
-        <i></i>
-        <span>Brian Smith</span>
-        <p>bsmith@yahoo.com
-          <br> 444-444-4444
+      <li class="collection-item avatar">
+        <i class="material-icons blue circle">contacts</i>
+        <span class="title">John Doe</span>
+        <p>jdoe@gmail.com
+          <br> 555-555-5555
         </p>
-        <a href="#">
-          <i></i>
+        <a href="#" class="secondary-content">
+          <i class="material-icons">grade</i>
         </a>
       </li>
-      <li>
-        <i></i>
-        <span>Jill Johnson</span>
-        <p>jill@gmail.com
-          <br> 333-333-3333
+      <li class="collection-item avatar">
+        <i class="material-icons blue circle">contacts</i>
+        <span class="title">John Doe</span>
+        <p>jdoe@gmail.com
+          <br> 555-555-5555
         </p>
-        <a href="#">
-          <i></i>
+        <a href="#" class="secondary-content">
+          <i class="material-icons">grade</i>
         </a>
       </li>
-      <li>
-        <i></i>
-        <span>Kevin Wallace</span>
-        <p>kevin@yahoo.com
-          <br> 888-888-8888
+      <li class="collection-item avatar">
+        <i class="material-icons blue circle">contacts</i>
+        <span class="title">John Doe</span>
+        <p>jdoe@gmail.com
+          <br> 555-555-5555
         </p>
-        <a href="#">
-          <i></i>
+        <a href="#" class="secondary-content">
+          <i class="material-icons">grade</i>
         </a>
       </li>
     </ul>
 
     <!-- BADGE IN DROPDOWN -->
-
-
+    <a href="#!" class="btn dropdown-button" data-activates="dropdown1">Dropdown
+    <i class="material-icons">arrow_drop_down</i></a>
+    <ul id="dropdown1" class="dropdown-content">
+      <li>
+        <a href="">Item 1</a>
+      </li>
+      <li>
+        <a href="">Item 2</a>
+      </li>
+      <li>
+        <a href="">Item 3</a>
+      </li>
+      <li>
+        <a href="">Item 4</a>
+      </li>
+    </ul>
     <!-- END HERE -->
 
 
