--- a/ChalkBoard(practice)/MATERIALIZE/3_1_cards.html
+++ b/ChalkBoard(practice)/MATERIALIZE/3_1_cards.html
@@ -126,16 +126,16 @@
     <div class="row">
       <div class="col s12 m6">
         <!-- SIMPLE CARD WITHOUT TITLE -->
-        <div>
-          <div>
+        <div class="card">
+          <div class="card-content">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita nesciunt ea
               voluptatem corporis iusto sint?</p>
           </div>
         </div>
 
         <!-- ADD COLOR -->
-        <div>
-          <div>
+        <div class="card red darken-2">
+          <div class="card-content white-text">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita nesciunt ea
               voluptatem corporis iusto sint?</p>
           </div>
@@ -143,14 +143,14 @@
       </div>
       <div class="col s12 m6">
         <!-- CARD WITH TITLE -->
-        <div>
-          <div>
-            <span>Card With Title</span>
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">Card With Title</span>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita nesciunt ea
               voluptatem corporis iusto sint?</p>
           </div>
           <!-- ADD LINKS -->
-          <div>
+          <div class="card-action">
             <a href="#">Read More</a>
             <a href="#">Read More</a>
           </div>
@@ -162,31 +162,31 @@
     <div class="row">
       <div class="col s12 m6">
         <!-- CARD WITH IMAGE -->
-        <div>
-          <div>
-            <img src="" alt="">
-            <span>Card Image</span>
+        <div class="card">
+          <div class="card-image">
+            <img src="img/img1.jpg" alt="">
+            <span class="card-title">Card Image</span>
           </div>
-          <div>
+          <div class="card-content">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita nesciunt ea
               voluptatem corporis iusto sint?</p>
           </div>
-          <div>
+          <div class="card-action">
             <a href="#">Read More</a>
           </div>
         </div>
       </div>
       <div class="col s12 m6">
         <!-- CARD WITH IMAGE & FLOATING BUTTON -->
-        <div>
-          <div>
-            <img src="" alt="">
-            <span>Image & Button</span>
-            <a>
-              <i></i>
+        <div class="card blue-grey lighten-4">
+          <div class="card-image">
+            <img src="img/img2.jpg" alt="">
+            <span class="card-title">Image & Button</span>
+            <a class="btn-floating halfway-fab waves-effect waves-light blue">
+              <i class="material-icons">add</i>
             </a>
           </div>
-          <div>
+          <div class="card-content">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita nesciunt ea
               voluptatem corporis iusto sint?</p>
           </div>
@@ -198,13 +198,13 @@
     <div class="row">
       <div class="col s12 m6">
         <!-- HORIZONTAL CARD -->
-        <div>
-          <div>
-            <img src="">
+        <div class="card horizontal">
+          <div class="card-image">
+            <img src="img/img3.jpg">
           </div>
-          <div>
-            <div>
-              <span>Horizontal</span>
+          <div class="card-stacked">
+            <div class="card-content">
+              <span class="card-title">Horizontal</span>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
           </div>
@@ -212,23 +212,23 @@
       </div>
       <div class="col s12 m6">
         <!-- CARD REVEAL -->
-        <div>
-          <div>
-            <img src="">
+        <div class="card">
+          <div class="card-image waves-effect waves-light waves-block">
+            <img class="activator" src="img/img4.jpg">
           </div>
-          <div>
-            <span>Card Reveal
-              <i></i>
+          <div class="card-content">
+            <span class="card-title activator">Card Reveal
+              <i class="material-icons">move_vert</i>
             </span>
             <p>
               <!-- add activator to anything -->
-              <a href="#!">Read More</a>
+              <a href="#!" class="activator">Read More</a>
             </p>
           </div>
           <!-- inside of reveal -->
-          <div>
-            <span>Card Title
-              <i></i>
+          <div class="card-reveal">
+            <span class="card-title">Card Title
+              <i class="material-icons">close</i>
             </span>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ad repudiandae sequi at quis assumenda iusto dolor
               in, maxime earum debitis ea vero aspernatur ipsum, totam iste molestias natus! Ullam?</p>
@@ -240,110 +240,107 @@
     <div class="row">
       <div class="col s12 m6">
         <!-- TABBED CARD -->
-        <div>
-          <div>
-            <span>Tabbed Card</span>
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">Tabbed Card</span>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex, rem obcaecati. Recusandae laborum, odit commodi
               fuga dolores dolorem, minima hic similique illo, ipsam eos. Perspiciatis omnis voluptas sunt delectus ab?</p>
           </div>
-          <div>
-            <ul>
-              <li>
+          <div class="card-tabs">
+            <ul class="tabs tabs-width-fixed">
+              <li class="tab">
                 <a href="#tab1">Tab 1</a>
               </li>
-              <li>
+              <li class="tab">
                 <a href="#tab2">Tab 2</a>
               </li>
-              <li>
+              <li class="tab">
                 <a href="#tab3">Tab 3</a>
               </li>
             </ul>
           </div>
-          <div>
-            <div>This is the content for tab 1</div>
-            <div>This is the content for tab 2</div>
-            <div>This is the content for tab 3</div>
+          <div class="card-content">
+            <div id="tab1">This is the content for tab 1</div>
+            <div id="tab2">This is the content for tab 2</div>
+            <div id="tab3">This is the content for tab 3</div>
           </div>
         </div>
       </div>
 
       <div class="col s12 m6">
         <!-- TABBED CARD COLORED -->
-        <div>
-          <div>
-            <span>Tabbed Card</span>
+        <div class="card orange darken white-text">
+          <div class="card-content">
+            <span class="card-title">Tabbed Card</span>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex, rem obcaecati. Recusandae laborum, odit commodi
               fuga dolores dolorem, minima hic similique illo, ipsam eos. Perspiciatis omnis voluptas sunt delectus ab?</p>
           </div>
-          <div>
-            <!-- make tabs transparent -->
-            <ul>
-              <li>
-                <a href="#tab4">Tab 1</a>
+          <div class="card-tabs">
+            <ul class="tabs tabs-width-fixed tabs-transparent">
+              <li class="tab">
+                <a href="#tab1">Tab 1</a>
               </li>
-              <li>
-                <a href="#tab5">Tab 2</a>
+              <li class="tab">
+                <a href="#tab2">Tab 2</a>
               </li>
-              <li>
-                <a href="#tab6">Tab 3</a>
+              <li class="tab">
+                <a href="#tab3">Tab 3</a>
               </li>
             </ul>
           </div>
-          <div>
-            <div>This is the content for tab 1</div>
-            <div>This is the content for tab 2</div>
-            <div>This is the content for tab 3</div>
+          <div class="card-content black lighten-4">
+            <div id="tab1">This is the content for tab 1</div>
+            <div id="tab2">This is the content for tab 2</div>
+            <div id="tab3">This is the content for tab 3</div>
           </div>
         </div>
-      </div>
-    </div>
 
     <!-- CARD SIZES -->
     <div class="row">
       <div class="col s12 m4">
         <!-- SMALL -->
-        <div>
-          <div>
-            <img src="">
-            <span>Card Image</span>
+        <div class="card">
+          <div class="card-image">
+            <img src="img/img5.jpg" alt="">
+            <span class="card-title">Card Image</span>
           </div>
-          <div>
+          <div class="card-content">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita nesciunt ea
               voluptatem corporis iusto sint?</p>
           </div>
-          <div>
+          <div class="card-action">
             <a href="#">Read More</a>
           </div>
         </div>
       </div>
       <div class="col s12 m4">
         <!-- MEDIUM -->
-        <div>
-          <div>
-            <img src="">
-            <span>Card Image</span>
+        <div class="card">
+          <div class="card-image">
+            <img src="img/img6.jpg" alt="">
+            <span class="card-title">Card Image</span>
           </div>
-          <div>
+          <div class="card-content">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita nesciunt ea
               voluptatem corporis iusto sint?</p>
           </div>
-          <div>
+          <div class="card-action">
             <a href="#">Read More</a>
           </div>
         </div>
       </div>
       <div class="col s12 m4">
         <!-- LARGE -->
-        <div>
-          <div>
-            <img src="">
-            <span>Card Image</span>
+        <div class="card">
+          <div class="card-image">
+            <img src="img/img7.jpg" alt="">
+            <span class="card-title">Card Image</span>
           </div>
-          <div>
+          <div class="card-content">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi harum enim inventore ullam expedita nesciunt ea
               voluptatem corporis iusto sint?</p>
           </div>
-          <div>
+          <div class="card-action">
             <a href="#">Read More</a>
           </div>
         </div>
