--- a/ChalkBoard(practice)/MATERIALIZE/2_3_buttons_icons.html
+++ b/ChalkBoard(practice)/MATERIALIZE/2_3_buttons_icons.html
@@ -146,41 +146,44 @@
 
     <!-- MATERIAL ICONS (https://material.io/icons) -->
     <i class="material-icons">shopping_cart</i>
-    <i class="material-icons">settings</i>
-    <i class="material-icons">search icon</i>
+    <i class="material-icons red-text">settings</i>
+    <i class="material-icons blue-text">search</i>
     <i class="material-icons">stars</i>
 
     <br>
     <br>
 
     <!-- ICON SIZES -->
-
+    <i class="material-icons large">done</i>
+    <i class="material-icons medium">done</i>
+    <i class="material-icons small">done</i>
+    <i class="material-icons tiny">done</i>
     <br>
     <br>
 
     <!-- BUTTON WITH MATERIAL ICON -->
-    <a href="#!">Buy Now</a>
-    <a href="#!">Buy Now</a>
+    <a class="btn waves-effect waves-light" href="#!"><i class="material-icons left">shopping_cart</i>Buy Now</a>
+    <a class="btn waves-effect waves-light" href="#!"><i class="material-icons right">shopping_cart</i>Buy Now</a>
     <!-- BUTTON WITH FONT AWESOME ICON -->
-    <a href="#!">Buy Now</a>
+    <a class="btn waves-effect waves-light" href="#!"><i class="fa fa-shopping-cart left"></i>Buy Now</a>
     <br>
     <br>
 
     <!-- COLORED BUTTONS -->
-    <button>Read More</button>
-    <button>Read More</button>
-    <button>Read More</button>
-    <button>Read More</button>
-    <button>Read More</button>
-    <button>Read More</button>
+    <button class="btn red">Read More</button>
+    <button class="btn purple">Read More</button>
+    <button class="btn orange">Read More</button>
+    <button class="btn teal">Read More</button>
+    <button class="btn black">Read More</button>
+    <button class="btn amber">Read More</button>
 
     <br>
     <br>
 
     <!-- LARGE BUTTON -->
-    <button>Large Button</button>
+    <button class="btn-large">Large Button</button>
     <!-- DISABLED BUTTON -->
-    <button>Disabled Button</button>
+    <button class="btn-large disabled">Disabled Button</button>
 
     <br>
     <br>
