--- a/ChalkBoard(practice)/MATERIALIZE/2_4_floating.html
+++ b/ChalkBoard(practice)/MATERIALIZE/2_4_floating.html
@@ -124,78 +124,78 @@
 
     <!-- START HERE -->
 
-    <!-- FLOATING BUTTONS -->
-    <button>
-      <i></i>
-    </button>
-    <button>
-      <i></i>
-    </button>
-    <!-- PULSE EFFECT -->
-    <button>
-      <i></i>
-    </button>
+     <!--FLOATING BUTTONS -->
+    <!--<button class="btn-floating btn-large waves-effect waves-light red">-->
+      <!--<i class="material-icons">add</i>-->
+    <!--</button>-->
+    <!--<a class="btn-floating btn-large waves-effect waves-light blue">-->
+      <!--<i class="material-icons">edit</i>-->
+    <!--</a>-->
+    <!--&lt;!&ndash; PULSE EFFECT &ndash;&gt;-->
+    <!--<button class="btn-floating btn-large waves-effect waves-light green pulse">-->
+      <!--<i class="material-icons">publish</i>-->
+    <!--</button>-->
 
     <!-- SIMPLE FIXED ACTION BUTTON -->
-    <div>
-      <button>
-        <i></i>
-      </button>
-    </div>
+    <!--<div class="fixed-action-btn">-->
+      <!--<button class="btn-floating btn-large red">-->
+        <!--<i class="material-icons">add</i>-->
+      <!--</button>-->
+    <!--</div>-->
 
     <!-- FIXED ACTION BUTTON [horizontal, click-to-toggle] -->
-    <div>
-      <a>
-        <i></i>
-      </a>
-      <ul>
-        <li>
-          <a>
-            <i></i>
-          </a>
-        </li>
-        <li>
-          <a>
-            <i></i>
-          </a>
-        </li>
-        <li>
-          <a>
-            <i></i>
-          </a>
-        </li>
-        <li>
-          <a>
-            <i></i>
-          </a>
-        </li>
-      </ul>
-    </div>
+    <!--<div class="fixed-action-btn horizontal click-to-toggle">-->
+      <!--<a class="btn-floating btn-large red">-->
+        <!--<i class="material-icons">mode_edit</i>-->
+      <!--</a>-->
+      <!--<ul>-->
+        <!--<li>-->
+          <!--<a class="btn-floating red">-->
+            <!--<i class="material-icons">insert_chart</i>-->
+          <!--</a>-->
+        <!--</li>-->
+        <!--<li>-->
+          <!--<a class="btn-floating blue">-->
+            <!--<i class="material-icons">format_quote</i>-->
+          <!--</a>-->
+        <!--</li>-->
+        <!--<li>-->
+          <!--<a class="btn-floating yellow">-->
+            <!--<i class="material-icons">publish</i>-->
+          <!--</a>-->
+        <!--</li>-->
+        <!--<li>-->
+          <!--<a class="btn-floating green">-->
+            <!--<i class="material-icons">attach_file</i>-->
+          <!--</a>-->
+        <!--</li>-->
+      <!--</ul>-->
+    <!--</div>-->
 
     <!-- FAB TOOLBAR -->
-    <div>
-      <a>
-        <i></i>
+    <div class="fixed-action-btn toolbar">
+      <a class="btn-floating large red">
+        <i class="material-icons">mode_edit</i>
       </a>
       <ul>
-        <li>
+        <li class="waves-effect waves-light">
           <a href="#!">
-            <i></i>
+            <i class="material-icons">insert_chart</i>
           </a>
         </li>
-        <li>
+        <li class="waves-effect waves-light">
           <a href="#!">
-            <i></i>
+            <i class="material-icons">format_quote</i>
           </a>
         </li>
-        <li>
+        <li class="waves-effect waves-light">
           <a href="#!">
-            <i></i>
+            <i class="material-icons">publish</i>
           </a>
         </li>
-        <li>
+        <li class="waves-effect waves-light">
           <a href="#!">
-            <i></i>
+            <i class="material-icons">attach_file</i>
           </a>
         </li>
       </ul>
@@ -223,7 +223,6 @@
       });
 
       // JAVASCRIPT START HERE //
-
 
 
 
