--- a/ChalkBoard(practice)/MATERIALIZE/2_5_navbar.html
+++ b/ChalkBoard(practice)/MATERIALIZE/2_5_navbar.html
@@ -129,14 +129,14 @@
 
   <!-- STANDARD MENU -->
   <nav>
-    <div>
-      <div>
-        <a href="#">Logo</a>
-        <ul>
+    <div class="nav-wrapper">
+      <div class="container">
+        <a href="#" class="brand-logo center">Logo</a>
+        <ul id="nav-mobile" class="right hide-on-small-and-down">
           <li>
             <a href="#">Home</a>
           </li>
-          <li>
+          <li class="active">
             <a href="#">About</a>
           </li>
           <li>
@@ -151,14 +151,14 @@
   <br>
 
   <!-- RESPONSIVE WITH SIDE MENU -->
-  <nav>
-    <div>
-      <div>
-        <a href="#">Logo</a>
-        <a href="#">
-          <i></i>
+  <nav class="blue darken-4">
+    <div class="container">
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo">Logo</a>
+        <a class="button-collapse" date-activates="mobile-nav" href="#">
+          <i class="material-icons">menu</i>
         </a>
-        <ul>
+        <ul class="right hide-on-medium-and-down">
           <li>
             <a href="#">Home</a>
           </li>
@@ -171,22 +171,22 @@
 
           <!-- DROPDOWN TRIGGER -->
           <li>
-            <a href="#!">Dropdown
-              <i></i>
+            <a class="dropdown-button" data-activates="my-dropdown" href="#!">Dropdown
+              <i class="material-icons right">arrow_drop_down</i>
             </a>
           </li>
           <!-- BUTTON LINK -->
           <li>
-            <a>Login</a>
+            <a class="btn waves-effect waves-light">Login</a>
           </li>
           <!-- ICON LINK -->
           <li>
             <a href="#">
-              <i>p</i>
+              <i class="material-icons" >person</i>
             </a>
           </li>
         </ul>
-        <ul>
+        <ul class="side-nav" id="mobile-nav">
           <li>
             <a href="#">Home</a>
           </li>
@@ -202,7 +202,7 @@
   </nav>
 
   <!-- DROPDOWN MENU -->
-  <ul>
+  <ul id="my-dropdown" class="dropdown-content">
     <li>
       <a href="#">Link 1</a>
     </li>
@@ -218,15 +218,35 @@
   <br>
 
   <!-- FIXED NAVBAR -->
-  <div>
-
+  <div class="navbar-fixed">
+    <nav class="black">
+    <div class="nav-wrapper">
+      <div class="container">
+        <a href="#" class="brand-logo center">Logo</a>
+        <ul id="nav-mobile" class="right hide-on-small-and-down">
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li class="active">
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   </div>
 
   <br>
   <br>
 
   <!-- SEARCH BAR -->
-
+  <nav class="green"></nav>
+    <div class="nav-wrapper">
+      <form ><div class="input"><input type="search" required><label for="search" class="label-icon"><i class="material-icons">search</i></label><i class="material-icons">close</i></div></form>
+    </div>
 
 
   <!-- END HERE -->
@@ -247,7 +267,7 @@
       });
 
       // JAVASCRIPT START HERE //
-
+      $('.button-collapse').sideNav();
 
 
 
