--- a/ChalkBoard(practice)/MATERIALIZE/3_2_breadcrumbs.html
+++ b/ChalkBoard(practice)/MATERIALIZE/3_2_breadcrumbs.html
@@ -128,13 +128,13 @@
   <!-- START HERE -->
 
   <!-- BREADCRUMB -->
-  <nav>
-    <div>
-      <div>
-        <div>
-          <a href="#">Home</a>
-          <a href="#">Users</a>
-          <a href="#">Brad</a>
+  <nav class="grey">
+    <div class="nav-wrapper">
+      <div class="container">
+        <div class="col s12">
+          <a href="#" class="breadcrumb">Home</a>
+          <a href="#" class="breadcrumb">Users</a>
+          <a href="#" class="breadcrumb">Nathan</a>
         </div>
       </div>
     </div>
@@ -144,8 +144,35 @@
   <br>
 
   <!-- FOOTER -->
-  <footer>
-
+  <footer class="page-footer grey darken-3">
+  <div class="container">
+    <div class="row">
+      <div class="col s12 m6">
+        <h5 class="grey-text text-lighten-3" >About Us</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda dolores eum fuga labore libero obcaecati, provident? Perferendis quam quos veniam.</p>
+      </div>
+      <a class="col s12 m4 offset-m2">
+        <h5 class="grey-text text-lighten-3">Links</h5>
+        <ul>
+          <li>
+            <a class=" white-text">Link 1</a>
+          </li>
+          <li>
+            <a class=" white-text">Link 2</a>
+          </li>
+          <li>
+            <a class=" white-text">Link 3</a>
+          </li>
+          <li>
+            <a class=" white-text">Link 4</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-copyright grey darken-2"><div class="container">Copyright &copy; 2018 <a href=""
+                                                                                  class="grey-text text-lighten-3 right">Terms & Conditions</a></div>
+    </div>
+  </div>
   </footer>
 
 
