--- a/ChalkBoard(practice)/MATERIALIZE/4_4_dialogs.html
+++ b/ChalkBoard(practice)/MATERIALIZE/4_4_dialogs.html
@@ -2,121 +2,121 @@
 <html>
 
 <head>
-  <!--Import Google Icon Font-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
 
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-  <title>Materialize Sandbox</title>
+    <title>Materialize Sandbox</title>
 </head>
 
 <body>
-  <div class="row">
+<div class="row">
     <div class="col s12">
-      <h1 class="center-align">Toasts & Tooltip Dialogs</h1>
+        <h1 class="center-align">Toasts & Tooltip Dialogs</h1>
     </div>
-  </div>
-  <div class="container">
+</div>
+<div class="container">
     <!-- MENU ROW -->
     <div class="row">
-      <div class="col s3">
-        <a class='dropdown-button btn btn-large blue' href='#' data-activates='css1'>CSS 1</a>
-        <ul id='css1' class='dropdown-content'>
-          <li>
-            <a href="2_1_typography.html">Typography & Alignment</a>
-          </li>
-          <li>
-            <a href="2_2_colors.html">Text & Background Colors</a>
-          </li>
-          <li>
-            <a href="2_3_buttons_icons.html">Buttons & Icons</a>
-          </li>
-          <li>
-            <a href="2_4_floating.html">Floating & Fixed Action Buttons</a>
-          </li>
-          <li>
-            <a href="2_5_navbar.html">Navbar</a>
-          </li>
-          <li>
-            <a href="2_6_collections.html">Collections & Badges</a>
-          </li>
-          <li>
-            <a href="2_7_grid.html">The Grid</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col s3">
-        <a class='dropdown-button btn btn-large green' href='#' data-activates='css2'>CSS 2</a>
-        <ul id='css2' class='dropdown-content'>
-          <li>
-            <a href="3_1_cards.html">Cards</a>
-          </li>
-          <li>
-            <a href="3_2_breadcrumbs.html">Breadcrumbs & Footer</a>
-          </li>
-          <li>
-            <a href="3_3_forms.html">Basic Form & Input</a>
-          </li>
-          <li>
-            <a href="3_4_forms_2.html">Fancy Form & Input</a>
-          </li>
-          <li>
-            <a href="3_5_tables_media.html">Tables & Media</a>
-          </li>
-          <li>
-            <a href="3_6_chips_pagination.html">Chips & Pagination</a>
-          </li>
-          <li>
-            <a href="3_7_preloaders.html">Preloaders</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col s3">
-        <a class='dropdown-button btn btn-large yellow black-text' href='#' data-activates='js1'>JS 1</a>
-        <ul id='js1' class='dropdown-content'>
-          <li>
-            <a href="4_1_carousel.html">Carousel</a>
-          </li>
-          <li>
-            <a href="4_2_collapsible.html">Collapsible</a>
-          </li>
-          <li>
-            <a href="4_3_feature_discovery.html">Feature Discovery</a>
-          </li>
-          <li>
-            <a href="4_4_dialogs.html">Toast & Tooltip Dialogs</a>
-          </li>
-          <li>
-            <a href="4_5_material_box_slider.html">Material Box & Slider</a>
-          </li>
-          <li>
-            <a href="4_6_modal.html">Modal</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col s3">
-        <a class='dropdown-button btn btn-large red' href='#' data-activates='js2'>JS 2</a>
-        <ul id='js2' class='dropdown-content'>
-          <li>
-            <a href="5_1_parallax.html">Parallax</a>
-          </li>
-          <li>
-            <a href="5_2_sidenav.html">Sidenav</a>
-          </li>
-          <li>
-            <a href="5_3_pushpin.html">Pushpin</a>
-          </li>
-          <li>
-            <a href="5_4_scrollspy.html">Scrollspy</a>
-          </li>
-          <li>
-            <a href="5_5_tabs.html">Tabs</a>
-          </li>
-        </ul>
-      </div>
+        <div class="col s3">
+            <a class='dropdown-button btn btn-large blue' href='#' data-activates='css1'>CSS 1</a>
+            <ul id='css1' class='dropdown-content'>
+                <li>
+                    <a href="2_1_typography.html">Typography & Alignment</a>
+                </li>
+                <li>
+                    <a href="2_2_colors.html">Text & Background Colors</a>
+                </li>
+                <li>
+                    <a href="2_3_buttons_icons.html">Buttons & Icons</a>
+                </li>
+                <li>
+                    <a href="2_4_floating.html">Floating & Fixed Action Buttons</a>
+                </li>
+                <li>
+                    <a href="2_5_navbar.html">Navbar</a>
+                </li>
+                <li>
+                    <a href="2_6_collections.html">Collections & Badges</a>
+                </li>
+                <li>
+                    <a href="2_7_grid.html">The Grid</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col s3">
+            <a class='dropdown-button btn btn-large green' href='#' data-activates='css2'>CSS 2</a>
+            <ul id='css2' class='dropdown-content'>
+                <li>
+                    <a href="3_1_cards.html">Cards</a>
+                </li>
+                <li>
+                    <a href="3_2_breadcrumbs.html">Breadcrumbs & Footer</a>
+                </li>
+                <li>
+                    <a href="3_3_forms.html">Basic Form & Input</a>
+                </li>
+                <li>
+                    <a href="3_4_forms_2.html">Fancy Form & Input</a>
+                </li>
+                <li>
+                    <a href="3_5_tables_media.html">Tables & Media</a>
+                </li>
+                <li>
+                    <a href="3_6_chips_pagination.html">Chips & Pagination</a>
+                </li>
+                <li>
+                    <a href="3_7_preloaders.html">Preloaders</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col s3">
+            <a class='dropdown-button btn btn-large yellow black-text' href='#' data-activates='js1'>JS 1</a>
+            <ul id='js1' class='dropdown-content'>
+                <li>
+                    <a href="4_1_carousel.html">Carousel</a>
+                </li>
+                <li>
+                    <a href="4_2_collapsible.html">Collapsible</a>
+                </li>
+                <li>
+                    <a href="4_3_feature_discovery.html">Feature Discovery</a>
+                </li>
+                <li>
+                    <a href="4_4_dialogs.html">Toast & Tooltip Dialogs</a>
+                </li>
+                <li>
+                    <a href="4_5_material_box_slider.html">Material Box & Slider</a>
+                </li>
+                <li>
+                    <a href="4_6_modal.html">Modal</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col s3">
+            <a class='dropdown-button btn btn-large red' href='#' data-activates='js2'>JS 2</a>
+            <ul id='js2' class='dropdown-content'>
+                <li>
+                    <a href="5_1_parallax.html">Parallax</a>
+                </li>
+                <li>
+                    <a href="5_2_sidenav.html">Sidenav</a>
+                </li>
+                <li>
+                    <a href="5_3_pushpin.html">Pushpin</a>
+                </li>
+                <li>
+                    <a href="5_4_scrollspy.html">Scrollspy</a>
+                </li>
+                <li>
+                    <a href="5_5_tabs.html">Tabs</a>
+                </li>
+            </ul>
+        </div>
     </div>
     <!-- ./ MENU ROW END -->
     <br>
@@ -125,52 +125,63 @@
     <!-- START HERE -->
 
     <!-- TOAST BUTTON -->
-    <a class="btn">Show Toast</a>
+    <a id="toast1" class="btn">Show Toast</a>
 
     <!-- ROUNDED TOAST -->
-    <a class="btn">Rounded Toast</a>
+    <a id="toast2" class="btn">Rounded Toast</a>
 
     <!-- CALLBACK ON DISMISS -->
-    <a class="btn">Toast With Callback</a>
+    <a id="toast3" class="btn">Toast With Callback</a>
 
     <br>
     <br>
 
     <!-- TOOLTIPS -->
-    <a class="btn">Bottom Tooltip</a>
-    <a class="btn">Top Tooltip</a>
-    <a class="btn">Right Tooltip</a>
-    <a class="btn">Left Tooltip</a>
+    <a class="btn tooltipped" data-position="bottom" data-delay="2000" data-tooltip="I am a tooltip">Bottom Tooltip</a>
+    <a class="btn tooltipped" data-position="top" data-delay="1000" data-tooltip="I am a tooltip">Bottom Tooltip</a>
+    <a class="btn tooltipped" data-position="right" data-delay="500" data-tooltip="I am a tooltip">Bottom Tooltip</a>
+    <a class="btn tooltipped" data-position="left" data-tooltip="I am a tooltip">Bottom Tooltip</a>
 
 
     <!-- END HERE -->
 
 
-  </div>
-  <!-- ./ CONTAINER END -->
+</div>
+<!-- ./ CONTAINER END -->
 
 
+<!--Import jQuery before materialize.js-->
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
 
-  <!--Import jQuery before materialize.js-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="js/materialize.min.js"></script>
-
-  <script>
+<script>
     $(document).ready(function () {
-      $('.dropdown-button').dropdown({
-        constrainWidth: false,
-        hover: true,
-        belowOrigin: true,
-        alignment: 'left'
-      });
+        $('.dropdown-button').dropdown({
+            constrainWidth: false,
+            hover: true,
+            belowOrigin: true,
+            alignment: 'left'
+        });
 
-      // JAVASCRIPT START HERE //
-
-
-
-
+        // JAVASCRIPT START HERE //
+        $('#toast1').click(function(){
+            Materialize.toast('I am toast', 3000);
+        })
+        $('#toast2').click(function(){
+            Materialize.toast('I am toast', 3000, 'rounded');
+        })
+        $('#toast3').click(function(){
+            Materialize.toast('I am toast', 3000,'',
+                function(){
+                alert('Toast Dismissed')
+                });
+        });
+        Materialize.toast('I am toast', 3000);
+        setTimeout(function(){
+        Materialize.toast.removeAll();
+        },2000);
     });
-  </script>
+</script>
 </body>
 
 </html>
