--- a/GameLab/Track2der/Track2der.html
+++ b/GameLab/Track2der/Track2der.html
@@ -10,5 +10,9 @@
 
 
 <script src="app.js"></script>
+<script src="GraphicsCommon.js"></script>
+<script src="Car.js"></script>
+<script src="Track.js"></script>
+<script src="Input.js"></script>
 </body>
 </html>
